[package]
name = "encode_decode_multi_thread"
version = "0.1.0"
authors = ["Roja-Eswaran <reswara1@binghamton.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
libsteg = {path="../libsteg"}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
